--- a/css/stylesfirework.css
+++ b/css/stylesfirework.css
@@ -65,7 +65,7 @@
 	right: 0;
 	top: 100%;
 	height: 40px;
-	background-color: #f5cf52;
+	background-color: #fffb00;
 }
 @keyframes explosion {
 	0% {
@@ -92,4 +92,15 @@
 }
 #firework2 .explosion::before {
 	animation: explosion 2s .6s ease-in-out infinite;
+	background-color: #00ff22;
+}
+
+#firework3 {
+	left:45%;
+	top: 40%;
+	transform: scale(1.7);
+}
+#firework3 .explosion::before {
+	animation: explosion 2s .3s ease-in-out infinite;
+	background-color: #ff0000;
 }
